Added sources that were consulted but not otherwise referenced in the text

--- a/biblio.bib
+++ b/biblio.bib
@@ -1668,7 +1668,7 @@
 }
 
 @article{rudolph2011foundations,
-  title     = {Foundations of description logics},
+  title     = {Foundations of Description Logics},
   author    = {Rudolph, Sebastian},
   journal   = {Reasoning Web. Semantic Technologies for the Web of Data: 7th International Summer School 2011, Galway, Ireland, August 23-27, 2011, Tutorial Lectures 7},
   pages     = {76--136},
@@ -1706,19 +1706,6 @@
   pages     = {11--21},
   year      = {2011},
   publisher = {IOS Press}
-}
-
-@article{motik2012ontology,
-  added-at  = {2016-02-27T16:18:12.000+0100},
-  biburl    = {https://www.bibsonomy.org/bibtex/207dd4c7c34a2cb13549785e99bb725b5/maanwa},
-  editor    = {Motik, Boris and Patel-Schneider, Peter and Parsia, Bijan},
-  interhash = {68a81ede0edf4b72190e5cf33df20cfb},
-  intrahash = {07dd4c7c34a2cb13549785e99bb725b5},
-  keywords  = {Model OWL Ontology},
-  timestamp = {2016-02-27T16:18:12.000+0100},
-  title     = {{OWL 2 Web Ontology Language. Structural Specification and Functional-Style Syntax (Second Edition)}},
-  url       = {http://www.w3.org/TR/owl2-syntax/},
-  year      = 2012
 }
 
 @inproceedings{baader2003least,
@@ -1786,24 +1773,6 @@
   ee            = {http://ceur-ws.org/Vol-477/paper_68.pdf},
   title         = {{An Extension of Regularity Conditions for Complex Role Inclusion Axioms}},
   year          = {2009}
-}
-
-@article{hitzler2012primer,
-  editor   = {Hitzler, Pascal and Kr{\"o}tzsch, Markus and Parsia, Bijan and Patel-Schneider, Peter F and Rudolph, Sebastian},
-  keywords = {Model OWL Ontology},
-  title    = {{OWL 2 Web Ontology Language
-              Primer (Second Edition)}},
-  url      = {https://www.w3.org/TR/owl2-primer/},
-  year     = 2012
-}
-
-@article{motik2012profiles,
-  editor   = {Motik, Boris and Cuenca Grau, Bernardo and Horrocks, Ian and Wu, Zhe and Fokoue, Achille and Lutz, Carsten},
-  keywords = {Model OWL Ontology},
-  title    = {{OWL 2 Web Ontology Language
-              Profiles (Second Edition)}},
-  url      = {https://www.w3.org/TR/owl2-profiles/},
-  year     = 2012
 }
 
 @article{reiter1987theory,
@@ -1930,12 +1899,233 @@
 }
 
 @article{musen2015protege,
-  title={The Prot{\'e}g{\'e} project: A look back and a look forward},
-  author={Musen, Mark A},
-  journal={AI matters},
-  volume={1},
-  number={4},
-  pages={4--12},
-  year={2015},
-  publisher={ACM New York, NY, USA}
+  title     = {The Prot{\'e}g{\'e} project: A look back and a look forward},
+  author    = {Musen, Mark A},
+  journal   = {AI matters},
+  volume    = {1},
+  number    = {4},
+  pages     = {4--12},
+  year      = {2015},
+  publisher = {ACM New York, NY, USA}
+}
+
+@inproceedings{righetti2022asymmetric,
+  title        = {Asymmetric hybrids: Dialogues for computational concept combination},
+  author       = {Righetti, Guendalina and Porello, Daniele and Troquard, Nicolas and Kutz, Oliver and Hedblom, Maria and Galliani, Pietro},
+  booktitle    = {Formal Ontology in Information Systems: Proceedings of the Twelfth International Conference (FOIS 2021)},
+  volume       = {344},
+  pages        = {81},
+  year         = {2022},
+  organization = {IOS Press}
+}
+
+@misc{ontologyutils,
+  author    = {Nicolas Troquard and Roberto Confalonieri and Pietro Galliani},
+  title     = {OntologyUtils},
+  year      = {2023},
+  publisher = {Bitbucket},
+  journal   = {Bitbucket repository},
+  url       = {https://bitbucket.org/troquard/ontologyutils},
+  note      = {commit 331b422171e88fa63811}
+}
+
+@misc{owlapi,
+  author    = {Ignazio Palmisano and Simon Spero and Peter Ansell and Matthew Horridge and Stian Soiland-Reyes and Jim Balhoff and Nicolas Rouquette and Huseyin Kir and Lewis John McGibbney et al.},
+  title     = {OWLAPI},
+  year      = {2023},
+  publisher = {GitHub},
+  journal   = {GitHub repository},
+  url       = {https://github.com/owlcs/owlapi},
+  note      = {commit b683b03cbe7587fbc8a1}
+}
+
+@misc{factpp,
+  author    = {Dmitry Tsarkov et al.},
+  title     = {FaCT++},
+  year      = {2023},
+  publisher = {Bitbucket},
+  journal   = {Bitbucket repository},
+  url       = {https://bitbucket.org/dtsarkov/factplusplus},
+  note      = {commit 650a50ce78a2f9c7fd60}
+}
+
+@misc{protegepluginexamples,
+  author    = {Jennifer Vendetti and Matthew Horridge and Igor Postanogov and Tania Tudorache},
+  title     = {protege-plugin-examples},
+  year      = {2023},
+  publisher = {GitHub},
+  journal   = {GitHub repository},
+  url       = {https://github.com/protegeproject/protege-plugin-examples},
+  note      = {commit d879601324d0c45d99e0}
+}
+
+@misc{ontodebug,
+  author    = {Konstantin Schekotihin and Patrick Rodler and Wolfgang Schmid and Philipp Fleiß and Dietmar Jannach and Thomas Schmitz},
+  title     = {OntoDebug},
+  year      = {2023},
+  publisher = {Universität Klagenfurt},
+  journal   = {AAU GitLab repository},
+  url       = {https://git-ainf.aau.at/interactive-KB-debugging/debugger},
+  note      = {commit 1b1c5115537b679460cf}
+}
+
+@article{guarino1995ontologies,
+  title     = {Ontologies and knowledge bases},
+  author    = {Guarino, Nicola and Giaretta, Pierdaniele},
+  journal   = {Towards very large knowledge bases},
+  pages     = {1--2},
+  year      = {1995},
+  publisher = {IOS press Clifton, VA, USA}
+}
+
+@article{matentzoglu2016introduction,
+  title  = {An Introduction to the OWL API},
+  author = {Matentzoglu, Nicolas and Palmisano, Ignazio},
+  url    = {http://syllabus.cs.manchester.ac.uk/pgt/2018/COMP62342/introduction-owl-api-msc.pdf},
+  year   = {2016}
+}
+
+@article{w3c2009owl,
+  title     = {OWL 2 Web Ontology Language
+               Document Overview (Second Edition)},
+  author    = {W3C Owl Working Group and others},
+  url       = {https://www.w3.org/TR/2012/REC-owl2-overview-20121211/},
+  year      = {2012},
+  publisher = {World Wide Web Consortium (W3C)}
+}
+
+@article{motik2012ontology,
+  added-at  = {2016-02-27T16:18:12.000+0100},
+  biburl    = {https://www.bibsonomy.org/bibtex/207dd4c7c34a2cb13549785e99bb725b5/maanwa},
+  editor    = {Motik, Boris and Patel-Schneider, Peter and Parsia, Bijan},
+  interhash = {68a81ede0edf4b72190e5cf33df20cfb},
+  intrahash = {07dd4c7c34a2cb13549785e99bb725b5},
+  keywords  = {Model OWL Ontology},
+  timestamp = {2016-02-27T16:18:12.000+0100},
+  title     = {{OWL 2 Web Ontology Language. Structural Specification and Functional-Style Syntax (Second Edition)}},
+  url       = {https://www.w3.org/TR/2012/REC-owl2-syntax-20121211/},
+  year      = 2012
+}
+
+@article{hitzler2012primer,
+  editor   = {Hitzler, Pascal and Kr{\"o}tzsch, Markus and Parsia, Bijan and Patel-Schneider, Peter F and Rudolph, Sebastian},
+  keywords = {Model OWL Ontology},
+  title    = {{OWL 2 Web Ontology Language
+              Primer (Second Edition)}},
+  url      = {https://www.w3.org/TR/2012/REC-owl2-primer-20121211/},
+  year     = 2012
+}
+
+@article{motik2012profiles,
+  editor   = {Motik, Boris and Cuenca Grau, Bernardo and Horrocks, Ian and Wu, Zhe and Fokoue, Achille and Lutz, Carsten},
+  keywords = {Model OWL Ontology},
+  title    = {{OWL 2 Web Ontology Language
+              Profiles (Second Edition)}},
+  url      = {https://www.w3.org/TR/2012/REC-owl2-profiles-20121211/},
+  year     = 2012
+}
+
+@article{bao2012reference,
+  editor = {Jie Bao and Elisa F. Kendall and Deborah L. McGuinness and Peter F. Patel-Schneider and Li Ding and Ankesh Khandelwal},
+  title  = {OWL 2 Web Ontology Language
+            Quick Reference Guide (Second Edition)},
+  url    = {https://www.w3.org/TR/2012/REC-owl2-quick-reference-20121211/},
+  year   = 2012
+}
+
+@inproceedings{shearer2009exploiting,
+  title        = {Exploiting partial information in taxonomy construction},
+  author       = {Shearer, Rob and Horrocks, Ian},
+  booktitle    = {The Semantic Web-ISWC 2009: 8th International Semantic Web Conference, ISWC 2009, Chantilly, VA, USA, October 25-29, 2009. Proceedings 8},
+  pages        = {569--584},
+  year         = {2009},
+  organization = {Springer}
+}
+
+@article{keet2021toward,
+  title     = {Toward a systematic conflict resolution framework for ontologies},
+  author    = {Keet, C Maria and Gr{\"u}tter, Rolf},
+  journal   = {Journal of Biomedical Semantics},
+  volume    = {12},
+  number    = {1},
+  pages     = {1--15},
+  year      = {2021},
+  publisher = {BioMed Central}
+}
+
+@book{antoniou2004semantic,
+  title     = {A semantic web primer},
+  author    = {Antoniou, Grigoris and Van Harmelen, Frank},
+  year      = {2004},
+  publisher = {MIT press}
+}
+
+@misc{protege5devdocs,
+  author  = {Protégé developers et al.},
+  title   = {Protege 5 Developer Documentation},
+  url     = {https://protegewiki.stanford.edu/wiki/Protege5DevDocs},
+  urldate = {2023-06-14}
+}
+
+@inproceedings{schulz2018role,
+  title     = {The Role of Foundational Ontologies for Preventing Bad Ontology Design.},
+  author    = {Schulz, Stefan},
+  booktitle = {JOWO},
+  year      = {2018}
+}
+
+@article{lambrix2023completing,
+  title     = {Completing and Debugging Ontologies: State of the Art and Challenges in Repairing Ontologies},
+  author    = {Lambrix, Patrick},
+  journal   = {ACM Journal of Data and Information Quality},
+  year      = {2023},
+  publisher = {ACM New York, NY}
+}
+
+@article{horrocks2007tableau,
+  title     = {A tableau decision procedure for},
+  author    = {Horrocks, Ian and Sattler, Ulrike},
+  journal   = {Journal of automated reasoning},
+  volume    = {39},
+  number    = {3},
+  pages     = {249--276},
+  year      = {2007},
+  publisher = {Springer}
+}
+
+@inproceedings{horrocks2005irresistible,
+  title     = {The Irresistible SRIQ.},
+  author    = {Horrocks, Ian and Kutz, Oliver and Sattler, Ulrike},
+  booktitle = {OWLED},
+  year      = {2005}
+}
+
+@book{krotzsch2010description,
+  title     = {Description logic rules},
+  author    = {Kr{\"o}tzsch, Markus},
+  volume    = {8},
+  year      = {2010},
+  publisher = {IOS Press}
+}
+
+@article{rodler2017generally,
+  title   = {A generally applicable, highly scalable measurement computation and optimization approach to sequential model-based diagnosis},
+  author  = {Rodler, Patrick and Schmid, Wolfgang and Schekotihin, Konstantin},
+  journal = {arXiv preprint arXiv:1711.05508},
+  year    = {2017}
+}
+
+@inproceedings{kazakov2012elk,
+  title        = {ELK reasoner: architecture and evaluation.},
+  author       = {Kazakov, Yevgeny and Kr{\"o}tzsch, Markus and Simancik, Frantisek},
+  booktitle    = {ORE},
+  year         = {2012},
+  organization = {Citeseer}
+}
+
+@techreport{kalyanpur2006axiom,
+  title       = {Axiom pinpointing: Finding (precise) justifications for arbitrary entailments in SHOIN (owl-dl)},
+  author      = {Kalyanpur, Aditya and Parsia, Bijan and Cuenca-Grau, B and Sirin, Evren},
+  year        = {2006},
+  institution = {Technical report, UMIACS, 2005-66}
 }
