Wrote about the problems of weakening SROIQ

--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,8 @@
 
 \newcommand{\ALC}{\ensuremath{\texorpdfstring{\mathcal{ALC}}{ALC}}\xspace}
 \newcommand{\SROIQ}{\ensuremath{\texorpdfstring{\mathcal{SROIQ}}{SROIQ}}\xspace}
+\newcommand{\ALCHOIQ}{\ensuremath{\texorpdfstring{\mathcal{ALCHOIQ}}{ALCHOIQ}}\xspace}
+\newcommand{\ALCH}{\ensuremath{\texorpdfstring{\mathcal{ALCH}}{ALCH}}\xspace}
 
 \newcommand{\Lmc}{\ensuremath{\mathcal{L}}\xspace}
 \newcommand{\Imc}{\ensuremath{\mathcal{I}}\xspace}
