--- a/sections/b.main/2.background/1.sroiq.tex
+++ b/sections/b.main/2.background/1.sroiq.tex
@@ -5,12 +5,12 @@ Formally, an ontology is a set of statements expressed in a suitable logical lan
 
 In this section will briefly introduce the description logic $\SROIQ$ \cite{horrocks2006even, rudolph2011foundations, baader_horrocks_lutz_sattler_2017}. A more detailed description, containing more information about the semantics, can be found in \cref{sroiq-appendix}.
 
-\subsubsection{The Syntax of \SROIQ}
+\subsubsection{The Syntax of \SROIQ} \label{sroiq-syntax}
 
 % TODO
 % TODO argue for my version of regularity
 
-\subsubsection{The Semantics of \SROIQ}
+\subsubsection{The Semantics of \SROIQ} \label{sroiq-semantics}
 
 % TODO
 
