--- a/sections/c.back/a.sroiq.tex
+++ b/sections/c.back/a.sroiq.tex
@@ -1,11 +1,11 @@
 
 % TODO
 
-\section{\texorpdfstring{$\SROIQ$}{SROIQ} Syntax} \label{sroiq-syntax}
+\section{\texorpdfstring{$\SROIQ$}{SROIQ} Syntax} \label{sroiq-syntax-appendix}
 
 \input{sections/c.back/a.sroiq/1.sroiq-syn.tex}
 
-\section{\texorpdfstring{$\SROIQ$}{SROIQ} Semantics} \label{sroiq-semantics}
+\section{\texorpdfstring{$\SROIQ$}{SROIQ} Semantics} \label{sroiq-semantics-appendix}
 
 \input{sections//c.back/a.sroiq/2.sroiq-sem.tex}
 
