--- a/sections/b.main/3.theory.tex
+++ b/sections/b.main/3.theory.tex
@@ -1,11 +1,11 @@
 
 % TODO
 
-\section{Problems of Expressivity} \label{expressivity-problems}
+\section{Difficulties with Weakening \SROIQ} \label{expressivity-problems}
 
 \input{sections/b.main/3.theory/1.expressivity.tex}
 
-\section{RBox weakening} \label{rbox-weakening}
+\section{Weakening Role Inclusion Axioms} \label{rbox-weakening}
 
 \input{sections/b.main/3.theory/2.rbox.tex}
 
