--- a/sections/b.main/3.theory/2.rbox.tex
+++ b/sections/b.main/3.theory/2.rbox.tex
@@ -1,25 +1,6 @@
-Let us now consider the weakening of RBox axioms, starting with the weakening of role hierarchies. Weakening role hierarchies in $\SROIQ$ becomes complicated due to global restrictions that are placed on the ontology. Adding an axiom to a valid $\SROIQ$ ontology, even if the axiom on its one may be valid, does not guarantee that the resulting ontology is still valid. Both the restrictions in the usage of simple roles and the regularity constraint on the RBox need to be considered if we want to ensure that a resulting ontology adheres to the restrictions in $\SROIQ$.
+Let us now consider the weakening of simple and complex role inclusion axioms. To ensure that by adding weakened axioms we do not cause a constraint violation in existing axioms and concepts, we choose the allowed weakening for RIAs such that all roles that are simple in $\Omcfull$, are also simple after adding to it a weakening of one of its axioms. We observe that for complex RIAs $S_1 \circ \cdots \circ S_n \sqsubseteq R$ we should not refine the role $R$. Since all roles returned by our refinement operator will be simple in $\Omcfull$, replacing $R$ with a refinement $R'$ would create a new axiom which, when added to the ontology, would make the role $R'$ which was simple in $\Omcfull$ non-simple. A similar argument can be made for refining $R$ in a simple RIA $S \sqsubseteq R$ where the role $S$ is non-simple in $\Omcfull$. Therefore, The only case in which it is possible to refine the super role of a RIA during axiom weakening requires that the RIA is simple and additionally that the sub role of the RIA is simple in $\Omcfull$.
 
-\subsection{Weakening role hierarchies in $\mathcal{ALCH}$} \label{weakening-rbox-alch}
+When it comes to refining the left-hand side of RIAs, we do not need any special restrictions. The important observation here is that all roles that are returned by the refinement will be simple. This means that in a simple RIA $R \sqsubseteq S$, even if $S$ is simple, replacing $R$ with another simple role will not cause $S$ to become non-simple. For a complex RIA $S_1 \circ \cdots \circ S_n \sqsubseteq R$ on the other hand, the role $R$ must already have been non-simple in $\Omcfull$, and replacing any $S_i$ with a refinement has no effect on whether a role is simple or non-simple.
 
-To avoid these complications, we will first consider the simple case of weakening role hierarchies in $\mathcal{ALCH}$. $\mathcal{ALCH}$ supports only simple RIAs, and does not have any of the restrictions that are present in $\SROIQ$. Also, we can note that
+A more interesting question is whether such a weakening may still cause a non-regular RBox. The main insight is that simple roles are always allowed on the left-hand side of a RIA. While this is more directly evident in some alternative definitions of regularity (e.g., \cite{rudolph2011foundations}) it is not so apparent from the one presented in this paper. Intuitively, the constraints given in \cref{sroiq-syntax} for regularity disallow dependency cycles that contain complex RIAs. Simple roles cannot be part of such a cycle, since the cycle must contain at least one complex RIA to be a violation of the constraint, and all roles that depend in this sense on a complex RIA must be non-simple. A more formal justification for this fact is given in the \hyperref[proof:regularity]{proof} for \cref{lem:regularity}. Since all refinements of the left-hand side of RIAs are performed using simple roles, these cannot lead to a non-regular RBox. Further, refinements of the super role of RIAs are only performed on simple RIAs $S \sqsubseteq R$ where $S$ is a simple role. Since $S$ is simple in this case, all refinements of $R$ are allowed, potentially also if the refinement yielded a non-simple role.
 
-\begin{example}
-%TODO possible weakening
-\end{example}
-
-\subsection{Weakening role hierarchies in $\mathcal{SROIQ}$} \label{weakening-rbox-sroiq}
-
-\begin{example}
-%TODO illegal weakening
-\end{example}
-
-\begin{example}
-%TODO illegal weakening
-\end{example}
-
-\begin{example}
-%TODO possible weakening
-\end{example}
-
-% TODO
